<resources>
    <string name="app_name">DataCollector</string>
    <string name="action_settings">Settings</string>

    <string name="title_section1">Workflow</string>
    <string name="title_section2">DataItem</string>
    <string name="title_section3">POI</string>

    <string name="hello_world">Hello world!</string>
    <string name="dummy_section_text">Section %1d is a dummy section.</string>
    <string name="refresh">Refresh</string>

    <string name="action_upload">Upload</string>
    <string name="action_uploadList">Data Session</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>
    <string name="take_photo">Take a Photo</string>
    <string name="demo_external_activity">Gallery</string>
    <string name="demo_collection">Collection</string>
    <string name="ready_collection">ReadyCollection</string>
    <string name="send_data">Save</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_collection_activity_detail">CollectionDetailActivity</string>
    <string name="dialog_title">Add Metadata</string>
    <string name="dialog_delete_title">Delete Metadata</string>

    <string name="ok">OK</string>
    <string name="cancel">Back</string>

    <string name="map_not_ready">Map is not ready yet</string>
    <string name="accuracy">Ac 0\nLa 0\nLo 0</string>
    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>

    <string name="problem_no_account">You need to pick an account.</string>
    <string name="problem_no_gps">No GPS available.</string>
    <string name="problem_no_net">No network connection available.</string>
    <string name="problem_create_file">There is one problem when creating photo.</string>


    <string name="Upload">Upload</string>
    <string name="Error">Error</string>
    <string name="Complete">Upload Successful</string>
    <string name="Success">Success</string>
    <string name="Loading">Loading..</string>


    <string name="recordBtn">Record</string>
    <string name="stopRecordBtn">Stop</string>
    <string name="playBtn">Play</string>

    <string name="dummy_email">shidenghui@gmail.com</string>
    <string name="dummy_password">123456789</string>
    <string name="Sign_in">Sign in</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activity_collection_detail">activity_collection_detail</string>

    <string name="next">next</string>
    <string name="got">Got it!</string>

</resources>
