<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button android:id="@+id/takePhoto"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/take_photo"/>

        <Button android:id="@+id/demo_external_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_external_activity" />

        <Button android:id="@+id/section_number"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/demo_collection"/>
    </LinearLayout>

</FrameLayout>
