<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dip">
    <GridView
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="2"
        android:verticalSpacing="0dp"
        android:horizontalSpacing="0dp"
        android:stretchMode="columnWidth"
        android:gravity="center" />

    <com.dd.CircularProgressButton
        android:id="@+id/btnWithText"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cpb_textComplete="@string/Complete"
        app:cpb_textError="@string/Error"
        app:cpb_textIdle="@string/Upload"
        android:layout_gravity="center_horizontal|bottom" />
</FrameLayout>