<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/launchpad"
    tools:context=".MainActivity$LaunchpadSectionFragment"
    android:background="@color/lightbg">

    <ImageView
        android:id="@+id/btnLocationUpdates"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:text="@string/btn_get_location"
        android:src="@drawable/marker_green" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/accuracy"
        android:maxLines="3"
        android:singleLine="false"
        android:layout_alignParentRight="true"
        />
<!--
    <ImageView android:id="@+id/takePhoto"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:text="@string/take_photo"
        android:src="@drawable/camera"
        android:layout_gravity="left|bottom" />

    <ImageView android:id="@+id/gallery_activity"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/demo_external_activity"
        android:src="@drawable/gallery"
        android:layout_gravity="center_horizontal|bottom" />

    <ImageView android:id="@+id/save"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/send_data"
        android:src="@drawable/save"
        android:layout_gravity="right|bottom" />


    <ScrollView
        android:id="@+id/scrollView"
        android:background="#8cf7f3ff"
        android:layout_below="@id/ratingBar"
        android:layout_alignParentLeft="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" >
-->
        <FrameLayout
            android:background="#8cf7f3ff"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ratingBar"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView"
                android:gravity="center"
                android:layout_gravity="center" />
            <Button
                android:id="@+id/playBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_light"
                android:layout_gravity="center"
                android:text="@string/playBtn"/>
            <com.skd.androidrecording.visualizer.VisualizerView
                android:id="@+id/visualizerView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:layout_gravity="center">
            </com.skd.androidrecording.visualizer.VisualizerView>

        </FrameLayout>

</RelativeLayout>
